# boxygram

./: .env  .gitignore  Cargo.toml  Makefile  README.md
ddl/: init.sql
src/: app.rs  controller.rs  db.rs  error.rs  lib.rs  main.rs  model.rs  route.rs  ws.rs
web/: global.css  index.html  script.js  whiteboard.html
