[package]
name = "boxygram"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.5"
actix-rt = "2.10.0"
actix-web = "4.4.1"
actix-ws = "0.3.0"
chrono = "0.4.38"
dotenvy = "0.15.7"
env_logger = "0.10.0"
futures-util = "0.3.31"
log = "0.4.20"
rusqlite = "0.32.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.111"
thiserror = "1.0.59"
tokio = "1.41.1"
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }
